// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "NullProto";
option java_package = "org.mojolang.mojo.core";

message Null {
}